Bug 460676 - Make the flag visible in the eclipsecon schedule

--- a/stylesheets/eclipsecon/_core/components/schedule.less
+++ b/stylesheets/eclipsecon/_core/components/schedule.less
@@ -99,4 +99,15 @@
       }
     }
   }
+  .flag-message {
+    top: 10px;
+    left: -42px;
+    text-align: center;
+    width: 100px;
+    overflow: visible;
+    z-index: 999;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 5px;
+  }
 }
